Adding some debug options

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
           
     - name: make release
       run: |
+        ls
+        pwd
         export PIN_ROOT=`pwd`/scarab-dependencies/pinplay-drdebug-3.5-pin-3.5-97503-gac534ca30-gcc-linux
         make clean -C src
         make opt -j -C src
